--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container">
         <h1>Elanco</h1>
+        <button id="button">Common Trends</button>
         <select id="Dropdown">
             <option value="applications">Elanco Applications</option>
             <option value="resources">Elanco Resources</option>
@@ -17,6 +18,9 @@
         <div id="apiData" class="data-container"></div> 
         <div id="apiData2" class="data-container"></div>
     </div>
+
+    <script src="button.js"></script> <!-- Include the button JavaScript file -->
+
 
     <script>
         const serviceDropdown = document.getElementById('serviceDropdown');
