--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Elanco Task - Services</title>
     <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="button.css">
+
 </head>
 <body>
     <div class="container">
@@ -122,6 +124,22 @@
             }
             tableHTML += '</table>';
             return tableHTML;
+        }
+
+        // Function to fetch the highest cost
+        function fetchHighestCost() {
+            // Make AJAX request to backend API endpoint
+            fetch('http://localhost:8080/highest-cost') // Assuming your Java backend is running on port 8080
+                .then(response => response.text())
+                .then(highestCost => {
+                    // Update the HTML content with the highest cost value
+                    document.getElementById('highestCost').innerText = `Highest Cost: $${highestCost}`; // Format the cost with two decimal places
+                })
+                .catch(error => {
+                    console.error('Error fetching highest cost:', error);
+                    // Display an error message to the user
+                    document.getElementById('highestCost').innerText = 'Error fetching highest cost. Please try again later.';
+                });
         }
     </script>    
 </body>
